# fastapi-sandbox

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
api/: config.py  db.py  dto.py  errors.py  middleware.py  models.py  router.py  services.py
migrations/: env.py  script.py.mako
migrations/versions/: a082d45a0eb5_initial.py
scripts/: migrate.sh  run_server.sh
