[tool.poetry]
name = "py-job-api"
version = "0.1.0"
description = ""
authors = ["LowCostCustoms <zhuebok@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.0"
environs = "^9.5.0"
crontab = "^0.23.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"
src_paths = "api"
